--- a/diaries/diary_day33_240202.md
+++ b/diaries/diary_day33_240202.md
@@ -1,1 +1,1 @@
-- 今天我的supervisor再次向我展示了用GPT来提供普遍的研究灵感的做法。我不应该给太多指导，而是专注让问题准确传达我想要表达的意思上。看来在GPT时代提问水平和语言能力真的很重要。
+- Today my supervisor showed me again the practice of using the GPT to provide general research inspiration. I shouldn't give too much guidance, but rather focus on getting the question to convey exactly what I want to say. It seems that the level of questioning and language skills are really important in the age of GPT.
